hibernate impprovement